# Rust-Crypto-Math-library

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: lib.rs
src/algebras/FiniteField/classes/: Zmod.rs
src/algebras/FiniteField/instances/: Zmod_instance.rs
src/algebras/Groups/: elliptic_curve_factory.rs
src/algebras/Groups/EllipticCurves/: elliptic_curve_factory.rs  elliptic_curve_generic.rs
src/algebras/Rings/classes/: PolynomialRing.rs
src/algebras/Rings/instances/: PolynomialRing_instance.rs
src/arith/: primes.rs  random.rs
src/cryptography/asymmetric/interfaces/: interfaces.rs
src/cryptography/asymmetric/primitives/: kyber.rs  rsa.rs
src/cryptography/general/: objects.rs
src/cryptography/homomorphic/interfaces/: interfaces.rs
src/cryptography/homomorphic/primitives/: bfv.rs
src/cryptography/padding/: padding.rs
src/cryptography/symmetric/AES/: aes_functions.rs  cipher.rs  data.rs
src/cryptography/symmetric/interfaces/: interfaces.rs
src/generators/: primes.rs
src/matrices/: matrix.rs  vector.rs
src/numbers/: numbers.rs
src/numbers/classes/: QQ.rs  RR.rs  ZZ.rs
src/numbers/instances/: QQ_instance.rs  RR_instance.rs  ZZ_instance.rs
src/numbers/sets/: Class.rs
src/poly/: monomial.rs  polynomial.rs  univariate_polynomial.rs
src/poly/classes/: monomial.rs  polynomial.rs  univariate_polynomial.rs
src/poly/instances/: monomial_instance.rs  polynomial_instance.rs  univariate_polynomial_instance.rs
src/test/: test_QQ.rs  test_RR.rs  test_ZZ.rs
src/transform/: ntt.rs
src/utilities/: utils.rs
src/variables/: vars.rs
(+2 files in other folders)
