[package]
name = "sagemath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sage_math"
path = "src/lib.rs"

[dependencies]
num-bigint = { version= "0.4.4", features = ["rand"]}
bigdecimal = "0.4.2"
num-integer = "0.1.45"
fraction = "0.14.0"
either = "1.9.0"
num-traits = "0.2.17"
rand = "0.8.5"
num-iter = "0.1.39"
rayon = "1.8.0"
num-prime = "0.4.3"